force-app/main/default/objects/Case/fields/Name_Insured__c.field-meta.xml
<CustomField>
    <fullName>Name_Insured__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact who has logged a case.</inlineHelpText>
    <label>Name Insured</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>