force-app/main/default/objects/Case/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated policy of a case.</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>