force-app/main/default/objects/Case/fields/Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy Holder of a case.</inlineHelpText>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>