force-app/main/default/objects/Case/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <businessProcess>Merlin Support Process</businessProcess>
    <description>Case details which are related to insurance claim.</description>
    <label>Claim</label>
</RecordType>