force-app/main/default/objects/Case/recordTypes/Financial_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Financial_Change_Request</fullName>
    <active>true</active>
    <businessProcess>Merlin Support Process</businessProcess>
    <description>Case details related to financial changes.</description>
    <label>Financial Change Request</label>
</RecordType>