force-app/main/default/objects/Case/recordTypes/Non_Financial_Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Non_Financial_Change_Request</fullName>
    <active>true</active>
    <businessProcess>Merlin Support Process</businessProcess>
    <description>Case details related to non-financial changes.</description>
    <label>Non-Financial Change Request</label>
</RecordType>